--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -4,6 +4,6 @@
     background-image: linear-gradient(180deg, #23232366, #34343466);
     color: $white;
     border-radius: 30px;
-    padding: 20px;
+    padding: 20px 30px 20px 30px;
     text-align: left;
 }
