--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -1,9 +1,22 @@
 @import '../Colors.scss';
 
 .text-grid {
-    background-image: linear-gradient(180deg, #23232366, #34343466);
+    background-image: linear-gradient(180deg, #23232388, #44444488);
     color: $white;
     border-radius: 30px;
     padding: 20px 30px 20px 30px;
     text-align: left;
+    box-shadow: 0px 0px 20px #00ff00;
+}
+
+.fade-in {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.2s ease-in;
+}
+
+.fade-out {
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 0.2s, opacity 0.2s ease-out;
 }
