--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -3,20 +3,104 @@
 .text-grid {
     background-image: linear-gradient(180deg, #23232388, #44444488);
     color: $white;
+    border: 1px solid $green;
     border-radius: 30px;
-    padding: 20px 30px 20px 30px;
+    padding: 20px 30px 30px;
     text-align: left;
-    box-shadow: 0px 0px 20px #00ff00;
+    box-shadow: 0px 0px 20px $green;
+}
+
+.main-header {
+    text-align: center;
+    margin: auto;
+    font-size: 50px;
+}
+
+.main-sub {
+    color: $gray;
+    margin: auto;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.main-hr {
+    margin: 15px;
+    text-align: center;
+    margin: auto;
+    width: 80%;
+}
+
+.larger-link {
+    vertical-align: center;
+    font-size: 45px;
+    text-align: left;
+    color: $white;
+    padding-bottom: 4px;
+    border-bottom-style: solid;
+    border-bottom-width: 3.1px;
+    width: fit-content;
+    text-decoration: none;
+}
+
+.larger-link:hover {
+    color: $orange;
+}
+
+.main-link {
+    display: inline-block;
+    font-size: 15px;
+    color: $white;
+    padding-bottom: 1.5px;
+    border-bottom-style: solid;
+    border-bottom-width: 1.8px;
+    width: fit-content;
+    text-decoration: none;
+}
+
+.main-img {
+    display: inline-block;
+    max-height: 15px;
+}
+
+.main-link:hover {
+    color: $orange;
 }
 
 .fade-in {
     visibility: visible;
     opacity: 1;
-    transition: opacity 0.2s ease-in;
+    transition: opacity 0.1s ease-in;
 }
 
 .fade-out {
     visibility: hidden;
     opacity: 0;
-    transition: visibility 0s 0.2s, opacity 0.2s ease-out;
+    transition: visibility 0s 0.1s, opacity 0.1s ease-out;
+}
+
+.wobble {
+    animation: wob 3s infinite ease;
+    transition: 1s all;
+}
+
+.non-wobble {
+    animation: non-wob 0.5s 1 ease-out;
+    transform-origin: 50% 100%;
+    transform: translate(0,0);
+    transition: 1s all;
+}
+
+@keyframes wob {
+    0% {transform: translateY(3px)};
+
+    50% {transform: translateY(-3px)};
+
+    100% {transform: translateY(3px)};
+}
+
+@keyframes non-wob {
+    0% {transform-origin: 50% 100%;};
+
+    100% {transform: translateY(0px)};
 }
