--- a/src/components/NavBarContainer.scss
+++ b/src/components/NavBarContainer.scss
@@ -36,3 +36,11 @@
     left: 50%;
     padding: 0;
 }
+
+.nav-container {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    z-index: 10;
+}
