--- a/src/components/ImagesContainer.scss
+++ b/src/components/ImagesContainer.scss
@@ -30,17 +30,19 @@
 }
 
 .overlay {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 21;
     width: 100vw;
     height: 100vh;
-    background-color: #00000088;
+    background-color: #000000aa;
 }
 
 .img-overlay {
     position: absolute;
-    top: 0px;
-    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 90vh;
 }
