added home button to non-home pages

--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -34,7 +34,7 @@
 .larger-link {
     vertical-align: center;
     font-size: 45px;
-    text-align: left;
+    text-align: center;
     color: $white;
     padding-bottom: 4px;
     border-bottom-style: solid;
