fixed scroll to top on /web page and added smoother toggle ani

--- a/src/components/WorkContainer.scss
+++ b/src/components/WorkContainer.scss
@@ -1,11 +1,16 @@
 @import '../Colors.scss';
 
 .work-container {
-    min-height: 100px;
+    max-height: 250px;
+    overflow: hidden;
     border-radius: 30px;
     padding: 20px 30px;
     margin: 30px 10px;
-    transition: 0.2s all;
+    transition: 0.2s all ease;
+}
+
+.expanded {
+    max-height: 2000px;
 }
 
 .work-title-text {
