--- a/src/components/ImagesContainer.scss
+++ b/src/components/ImagesContainer.scss
@@ -11,7 +11,7 @@
     border-radius: 8px;
     border: 1px $green solid;
     display: inline-block;
-    max-height: 200px;
+    min-height: 200px;
     width: 100%;
     overflow: hidden;
     transition: 0.2s all;
@@ -30,34 +30,20 @@
     transition: .2s all;
 }
 
-.img-inner1 {
+.img-inner {
     position: absolute;
-    top: 0;
     left: 0;
-    object-fit: cover;
-    object-position: center;
-    transition: .2s all;
-    width: 100%;
 }
 
-@keyframes imageMoveDown {
+.img-ani {
+    animation-name: image1;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease;
+}
+
+@keyframes imageUp {
     0% {transform: translate(0,0);}
+    
     100% {transform: translate(0,-5%);}
 }
-
-// .img2 {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     object-fit: cover;
-//     object-position: center;
-//     transition: .2s all;
-//     width: 100%;
-//     z-index: 10;
-// }
-
-// @keyframes imageMoveUp {
-//     0% {transform: translate(0,0);opacity: 1;}
-//     95% {opacity: 1;}
-//     100% {transform: translate(0,5%);opacity: 0;}
-// }
