added background images to work containers, page titles

--- a/src/components/HomePage.scss
+++ b/src/components/HomePage.scss
@@ -104,3 +104,23 @@
 
     100% {transform: translateY(0px)};
 }
+
+.page-title {
+    text-align: center;
+    margin-top: 170px;
+    margin-bottom: 25px;
+    font-size: 60px;
+    -webkit-filter: brightness(110%);
+    filter: brightness(110%);
+}
+
+@media screen and (min-width: 500px) {
+    .page-title {
+        text-align: center;
+        margin-top: 110px;
+        margin-bottom: 25px;
+        font-size: 60px;
+        -webkit-filter: brightness(110%);
+        filter: brightness(110%);
+    }
+}
