--- a/src/components/WorkContainer.scss
+++ b/src/components/WorkContainer.scss
@@ -9,10 +9,39 @@
     transition: 0.4s all ease;
 }
 
+.work-content {
+    position: relative;
+    z-index: 2;
+}
+
 .content-container {
     padding: 30px !important;
     border-radius: 25px;
-    border: 0;
+    border: 1px solid white;
+}
+
+.content-image-bg {
+    background-size: 110%;
+    background-position-y: bottom;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: -20;
+    transition: 0.4s all ease;
+}
+
+.content-image-tint {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: -20;
+    background-size: '110%';
+    z-index: 1;
+    transition: 0.4s all ease;
 }
 
 .expanded {
