--- a/src/components/HomePageContainer/HomePageContainer.scss
+++ b/src/components/HomePageContainer/HomePageContainer.scss
@@ -53,6 +53,10 @@
     text-decoration: none;
 }
 
+.larger-link:hover {
+    cursor: pointer;
+}
+
 @media screen and (min-width: 500px) {
     .larger-link {
         vertical-align: center;
@@ -88,6 +92,7 @@
 .main-img {
     display: inline-block;
     max-height: 15px;
+    margin-left: 10px;
 }
 
 .main-link:hover {
