Fixed the long-running scrolling issue + Added animations to the web and art 3d models + Added chevrons with the correct color for each page + Mobile background fix + Other minor adjustments

--- a/src/components/NavBarContainer/NavBarContainer.scss
+++ b/src/components/NavBarContainer/NavBarContainer.scss
@@ -2,12 +2,12 @@
 
 .qual-btn {
     position: relative;
-    border: 0px;
-    border-radius: 20px;
+    border: 0;
+    border-radius: 1em;
     color: #fefefe99;
     background-color: #55ff0011;
-    font-size: 20px;
-    padding: 30px;
+    font-size: 1rem;
+    padding: 1em;
     transition: 0.3s;
 }
 
