Made a bunch of mobile friendly styling changes + Added a green scrollbar to the entire site + Made the work text green for all pages to fit the theme + Added cyclinder animation to hide the 3d model loading for the mobile phone version of the site + Reduced the quality of the photos used on the homepage

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,29 @@
+@import 'Colors.scss';
+
 body {
     background-color: black !important;
 }
 
 .fade-in-img {
     animation: fade-in-img-ani 1.5s;
+}
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 0.8em;
+}
+  
+::-webkit-scrollbar-track {
+    background: black;
+}
+  
+::-webkit-scrollbar-thumb {
+    background: $green;
+    border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: $orange;
 }
 
 @keyframes fade-in-img-ani {
