--- a/src/components/NavBarContainer/NavBarContainer.scss
+++ b/src/components/NavBarContainer/NavBarContainer.scss
@@ -1,23 +1,53 @@
 @import '../../Colors.scss';
 
-.qual-btn {
+.nav-bar-comp {
+    width: 100%;
+    max-width: 70em;
+
+    /* Needed to overlap the threeJS background */
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, 0%);
+
+    /* Needed to be in front of everything on the page */
+    z-index: 10;
+}
+
+.nav-bar-comp__row,
+.nav-bar-comp__col {
+   display: flex;
+}
+
+.nav-bar-comp__row {
+    justify-content: center;
+    column-gap: 1em;
+ }
+
+.nav-bar-comp__col {
+    flex-direction: column;
+}
+
+.nav-bar-comp__btn {
+    text-align: center;
     position: relative;
     border: 0;
     border-radius: 1em;
     color: #fefefe99;
     background-color: #55ff0011;
+    letter-spacing: 0.03em;
     font-size: 1rem;
     padding: 1em;
     transition: 0.3s;
 }
 
-.qual-btn:hover {
+.nav-bar-comp__btn:hover {
     color: $white;
     transition: 0.3s;
     background-color: #55ff0055;
 }
 
-.qual-btn:after {
+.nav-bar-comp__btn:after {
     content: "";
     position: absolute;
     background: $white;
@@ -29,18 +59,10 @@
     padding: 50%;
 }
 
-.qual-btn:active:after {
+.nav-bar-comp__btn:active:after {
     opacity: 1;
     transition: 0s;
     top: 50%;
     left: 50%;
     padding: 0;
-}
-
-.nav-container {
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0%);
-    z-index: 10;
 }
