Refactored the image carousel to use any number of photos & display the selected photo above the image thumbnails + Several adjustments to the verbiage to resolve linting warnings

--- a/src/components/HomePageContainer/HomePageContainer.scss
+++ b/src/components/HomePageContainer/HomePageContainer.scss
@@ -81,7 +81,7 @@
 .home-page-comp__close-btn:focus {
     background: $orange;
     color: $white;
-    border: none;
+    border: 1px solid $orange;
 }
 
 .home-page-comp__page-nav-col {
